--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
       &copy; 2018 Code Fellows
     </footer>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
