--- a/index.html
+++ b/index.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>The Gallery of Horns</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <header>
-      <h1>The Gallery of Horns</h1>
-      <select id="sel">
-        <option value="default">Filter by Keyword</option>
-      </select>
-    </header>
-    <main>
-    <section>
-      <div class="photo-template">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
-      </div>
+
+<head>
+  <title>The Gallery of Horns</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <header>
+    <h1>The Gallery of Horns</h1>
+    <input type="radio" id="sortbynum" name="sort" value="sortbynum">
+    <label for="sortbynum">Sort by Number of Horns</label><br>
+    <input type="radio" id="sortbyname" name="sort" value="sortbyname">
+    <label for="sortbyname">Sort by Name</label><br>
+    <select id="sel">
+      <option value="default">Filter by Keyword</option>
+    </select>
+    <select id="sel2">
+      <option value="default">Filter by Keyword</option>
+    </select>
+    <a href="" id="page1">page1</a>
+    <a href="" id="page2">page2</a>
+  </header>
+  <main>
+    <section id="neighborhoods">
+      <h2>Sorted by Name</h2>2
+      <template id="neighborhood-template" type="text/x-tmpl-mustache">
+        <div class="photo-template {{keyword}}">
+          <h2>{{title}}#{{horns}}</h2>
+          <img src={{image_url}}>
+          <p>{{description}}</p>
+        </div>
+      </template>
     </section>
-    </main>
-    <footer>
-      &copy; 2018 Code Fellows
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+    <section id="neighborhoods2">
+      <h2>Sorted by Number of Horns</h2>
+      <template id="neighborhood-template2" type="text/x-tmpl-mustache">
+        <div class="photo-template {{keyword}}">
+          <h2>{{title}}#{{horns}}</h2>
+          <img src={{image_url}}>
+          <p>{{description}}</p>
+        </div>
+      </template>
+    </section>
+  </main>
+  <footer>
+    &copy; 2018 Code Fellows
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="https://unpkg.com/mustache@latest"></script>
+  <script src="js/app.js"></script>
+</body>
+
 </html>
